// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`buildDraftSurvey — CA-001 > snapshot — discharge (CA-001) 1`] = `
{
  "content": [
    {
      "attrs": {
        "level": 3,
        "textAlign": "center",
      },
      "content": [
        {
          "text": "Survey Report",
          "type": "text",
        },
      ],
      "type": "heading",
    },
    {
      "attrs": {
        "textAlign": "center",
      },
      "content": [
        {
          "text": "Ref:",
          "type": "text",
        },
        {
          "marks": [
            {
              "attrs": {
                "field": "ref",
              },
              "type": "dataField",
            },
          ],
          "text": "—",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    {
      "attrs": {
        "level": 1,
        "textAlign": "center",
      },
      "content": [
        {
          "text": "Draft Survey",
          "type": "text",
        },
      ],
      "type": "heading",
    },
    {
      "attrs": {
        "level": 2,
        "textAlign": "center",
      },
      "content": [
        {
          "marks": [
            {
              "attrs": {
                "field": "vessel_name",
              },
              "type": "dataField",
            },
          ],
          "text": "“MV Perseus I”",
          "type": "text",
        },
      ],
      "type": "heading",
    },
    {
      "attrs": {
        "textAlign": "center",
      },
      "content": [
        {
          "text": "Flag ",
          "type": "text",
        },
        {
          "marks": [
            {
              "attrs": {
                "field": "flag",
              },
              "type": "dataField",
            },
          ],
          "text": "Malta",
          "type": "text",
        },
        {
          "text": " – IMO ",
          "type": "text",
        },
        {
          "marks": [
            {
              "attrs": {
                "field": "imo",
              },
              "type": "dataField",
            },
          ],
          "text": "9876543",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    {
      "attrs": {
        "textAlign": "center",
      },
      "content": [
        {
          "text": "at ",
          "type": "text",
        },
        {
          "marks": [
            {
              "attrs": {
                "field": "port",
              },
              "type": "dataField",
            },
          ],
          "text": "Santos",
          "type": "text",
        },
        {
          "text": " Port/Brazil – ",
          "type": "text",
        },
        {
          "marks": [
            {
              "attrs": {
                "field": "final_date",
              },
              "type": "dataField",
            },
          ],
          "text": "24/Jun/2026",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    {
      "attrs": {
        "heightMm": 108,
        "photoId": null,
        "slotId": "cover",
        "src": null,
        "widthMm": 158,
      },
      "type": "photoFrame",
    },
    {
      "attrs": {
        "level": 2,
      },
      "content": [
        {
          "text": "PERSON / COMPANIES CONTACTED",
          "type": "text",
        },
      ],
      "type": "heading",
    },
    {
      "attrs": {
        "kind": "label",
        "rows": [
          [
            "Client",
            "Cargill — Santos Brasil",
          ],
          [
            "Undersigned Surveyor",
            "NAABSA Marine Surveyors",
          ],
          [
            "Vessel's Command (Master / Chief Officer)",
            "J. Silva / A. Pereira",
          ],
        ],
        "tableId": "persons_contacted",
      },
      "type": "dataTable",
    },
    {
      "attrs": {
        "level": 2,
      },
      "content": [
        {
          "text": "Contents",
          "type": "text",
        },
      ],
      "type": "heading",
    },
    {
      "attrs": {
        "label": "Background",
        "tocTarget": "background",
        "value": "",
      },
      "type": "leaderLine",
    },
    {
      "attrs": {
        "label": "Ship's Particulars",
        "tocTarget": "particulars",
        "value": "",
      },
      "type": "leaderLine",
    },
    {
      "attrs": {
        "label": "Draft Survey",
        "tocTarget": "draft-survey",
        "value": "",
      },
      "type": "leaderLine",
    },
    {
      "attrs": {
        "label": "Initial",
        "tocTarget": "initial",
        "value": "",
      },
      "type": "leaderLine",
    },
    {
      "attrs": {
        "label": "4.1. Draft readings",
        "tocTarget": "initial-1",
        "value": "",
      },
      "type": "leaderLine",
    },
    {
      "attrs": {
        "label": "4.2. Sea water density",
        "tocTarget": "initial-2",
        "value": "",
      },
      "type": "leaderLine",
    },
    {
      "attrs": {
        "label": "4.3. Ballast water and fresh water",
        "tocTarget": "initial-3",
        "value": "",
      },
      "type": "leaderLine",
    },
    {
      "attrs": {
        "label": "4.4. Fuel R.O.B.",
        "tocTarget": "initial-4",
        "value": "",
      },
      "type": "leaderLine",
    },
    {
      "attrs": {
        "label": "4.5. Initial Draft details",
        "tocTarget": "initial-5",
        "value": "",
      },
      "type": "leaderLine",
    },
    {
      "attrs": {
        "label": "Final",
        "tocTarget": "final",
        "value": "",
      },
      "type": "leaderLine",
    },
    {
      "attrs": {
        "label": "6.1. Draft readings",
        "tocTarget": "final-1",
        "value": "",
      },
      "type": "leaderLine",
    },
    {
      "attrs": {
        "label": "6.2. Sea water density",
        "tocTarget": "final-2",
        "value": "",
      },
      "type": "leaderLine",
    },
    {
      "attrs": {
        "label": "6.3. Ballast water and fresh water",
        "tocTarget": "final-3",
        "value": "",
      },
      "type": "leaderLine",
    },
    {
      "attrs": {
        "label": "6.4. Fuel R.O.B.",
        "tocTarget": "final-4",
        "value": "",
      },
      "type": "leaderLine",
    },
    {
      "attrs": {
        "label": "6.5. Final Draft details",
        "tocTarget": "final-5",
        "value": "",
      },
      "type": "leaderLine",
    },
    {
      "attrs": {
        "label": "Photographic Report",
        "tocTarget": "photos",
        "value": "",
      },
      "type": "leaderLine",
    },
    {
      "attrs": {
        "label": "7.1. Initial",
        "tocTarget": "photos-1",
        "value": "",
      },
      "type": "leaderLine",
    },
    {
      "attrs": {
        "label": "7.3. Final",
        "tocTarget": "photos-3",
        "value": "",
      },
      "type": "leaderLine",
    },
    {
      "attrs": {
        "label": "Attachment",
        "tocTarget": "attachment",
        "value": "",
      },
      "type": "leaderLine",
    },
    {
      "attrs": {
        "anchor": "background",
        "level": 2,
      },
      "content": [
        {
          "text": "Background",
          "type": "text",
        },
      ],
      "type": "heading",
    },
    {
      "content": [
        {
          "text": "In compliance with the appointment survey from Messrs. ",
          "type": "text",
        },
        {
          "marks": [
            {
              "attrs": {
                "field": "client",
              },
              "type": "dataField",
            },
          ],
          "text": "Cargill",
          "type": "text",
        },
        {
          "text": ", we attended the vessel to carry out the Draft Survey to ascertain the total quantity of cargo discharged and to compare it with the Shore scale/Bills of lading.",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    {
      "content": [
        {
          "text": "She called ",
          "type": "text",
        },
        {
          "marks": [
            {
              "attrs": {
                "field": "port",
              },
              "type": "dataField",
            },
          ],
          "text": "Santos",
          "type": "text",
        },
        {
          "text": " Port to discharge a cargo of ",
          "type": "text",
        },
        {
          "marks": [
            {
              "attrs": {
                "field": "cargo",
              },
              "type": "dataField",
            },
          ],
          "text": "Soybean",
          "type": "text",
        },
        {
          "text": " in bulk loaded in ",
          "type": "text",
        },
        {
          "marks": [
            {
              "attrs": {
                "field": "discharging_port",
              },
              "type": "dataField",
            },
          ],
          "text": "Rotterdam",
          "type": "text",
        },
        {
          "text": ".",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    {
      "attrs": {
        "anchor": "particulars",
        "level": 2,
      },
      "content": [
        {
          "text": "Ship's Particulars",
          "type": "text",
        },
      ],
      "type": "heading",
    },
    {
      "attrs": {
        "kind": "label",
        "rows": [
          [
            "Flag",
            "Malta",
          ],
          [
            "Port registry",
            "—",
          ],
          [
            "Call sign",
            "—",
          ],
          [
            "IMO number",
            "9876543",
          ],
          [
            "Type",
            "—",
          ],
          [
            "Delivered",
            "—",
          ],
          [
            "LOA",
            "—",
          ],
          [
            "LBP",
            "—",
          ],
          [
            "Depth moulded",
            "—",
          ],
          [
            "Breadth moulded",
            "—",
          ],
          [
            "Net tonnage",
            "—",
          ],
          [
            "Gross tonnage",
            "—",
          ],
          [
            "Summer DWT",
            "—",
          ],
        ],
        "tableId": "ships_particulars",
      },
      "type": "dataTable",
    },
    {
      "attrs": {
        "anchor": "draft-survey",
        "level": 2,
      },
      "content": [
        {
          "text": "Draft Survey",
          "type": "text",
        },
      ],
      "type": "heading",
    },
    {
      "attrs": {
        "anchor": "initial",
        "level": 2,
      },
      "content": [
        {
          "text": "Initial",
          "type": "text",
        },
      ],
      "type": "heading",
    },
    {
      "content": [
        {
          "text": "The initial Draft Survey was carried out on ",
          "type": "text",
        },
        {
          "marks": [
            {
              "attrs": {
                "field": "initial_date",
              },
              "type": "dataField",
            },
          ],
          "text": "24/Jun/2026",
          "type": "text",
        },
        {
          "text": ", upon berthing at ",
          "type": "text",
        },
        {
          "marks": [
            {
              "attrs": {
                "field": "terminal",
              },
              "type": "dataField",
            },
          ],
          "text": "T-Granéis",
          "type": "text",
        },
        {
          "text": " Terminal, shed ",
          "type": "text",
        },
        {
          "marks": [
            {
              "attrs": {
                "field": "shed",
              },
              "type": "dataField",
            },
          ],
          "text": "—",
          "type": "text",
        },
        {
          "text": " from ",
          "type": "text",
        },
        {
          "marks": [
            {
              "attrs": {
                "field": "initial_start",
              },
              "type": "dataField",
            },
          ],
          "text": "08:00h",
          "type": "text",
        },
        {
          "text": " up to ",
          "type": "text",
        },
        {
          "marks": [
            {
              "attrs": {
                "field": "initial_end",
              },
              "type": "dataField",
            },
          ],
          "text": "10:30h",
          "type": "text",
        },
        {
          "text": " local time jointly with ship's command and the undersigned surveyor.",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    {
      "attrs": {
        "anchor": "initial-1",
      },
      "content": [
        {
          "marks": [
            {
              "type": "bold",
            },
          ],
          "text": "Draft readings: ",
          "type": "text",
        },
        {
          "text": "Starboard side from shore, alongside vessel and Port side from boat.",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    {
      "attrs": {
        "headers": [
          "Draft Mark",
          "Means",
          "Mean corrected",
          "",
          "",
          "",
        ],
        "rows": [
          [
            "Fwd",
            "4.780",
            "4.7802",
            "",
            "Trim obs",
            "-0.6600 m",
          ],
          [
            "Ms",
            "5.120",
            "5.1198",
            "",
            "Trim correct",
            "-0.6599 m",
          ],
          [
            "Aft",
            "5.440",
            "5.4401",
            "",
            "Heel",
            "—",
          ],
          [
            "",
            "",
            "",
            "",
            "Deflection",
            "—",
          ],
        ],
        "tableId": "init_readings",
      },
      "type": "dataTable",
    },
    {
      "attrs": {
        "anchor": "initial-2",
      },
      "content": [
        {
          "marks": [
            {
              "type": "bold",
            },
          ],
          "text": "Sea water density: ",
          "type": "text",
        },
        {
          "text": "A seawater sample was collected in way of the midship draft mark, on the sea side. The vessel's hydrometer was considered the official instrument for all readings.",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    {
      "attrs": {
        "anchor": "initial-3",
      },
      "content": [
        {
          "marks": [
            {
              "type": "bold",
            },
          ],
          "text": "Ballast water and fresh water: ",
          "type": "text",
        },
        {
          "text": "All ballast water tanks were gauged individually, and the volumes were calculated by applying the applicable trim and list corrections. The fresh water quantity was provided by the Chief Officer",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    {
      "attrs": {
        "anchor": "initial-4",
      },
      "content": [
        {
          "marks": [
            {
              "type": "bold",
            },
          ],
          "text": "Fuel R.O.B.: ",
          "type": "text",
        },
        {
          "text": "According to the logbook – FWE.",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    {
      "attrs": {
        "anchor": "initial-5",
        "level": 3,
      },
      "content": [
        {
          "text": "Initial Draft details",
          "type": "text",
        },
      ],
      "type": "heading",
    },
    {
      "attrs": {
        "anchor": "final",
        "level": 2,
      },
      "content": [
        {
          "text": "Final",
          "type": "text",
        },
      ],
      "type": "heading",
    },
    {
      "content": [
        {
          "text": "The final Draft Survey was carried out on ",
          "type": "text",
        },
        {
          "marks": [
            {
              "attrs": {
                "field": "final_date",
              },
              "type": "dataField",
            },
          ],
          "text": "24/Jun/2026",
          "type": "text",
        },
        {
          "text": ", from ",
          "type": "text",
        },
        {
          "marks": [
            {
              "attrs": {
                "field": "final_start",
              },
              "type": "dataField",
            },
          ],
          "text": "14:00h",
          "type": "text",
        },
        {
          "text": " up to ",
          "type": "text",
        },
        {
          "marks": [
            {
              "attrs": {
                "field": "final_end",
              },
              "type": "dataField",
            },
          ],
          "text": "16:30h",
          "type": "text",
        },
        {
          "text": " local time jointly with ship's command and the undersigned surveyor to ascertain the total quantity of the cargo discharged being the following figures disclosed:",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    {
      "attrs": {
        "label": "Shore Scale/BsL figures (Official)",
        "tocTarget": null,
        "value": "—",
      },
      "type": "leaderLine",
    },
    {
      "attrs": {
        "label": "NAABSA's surveyor figures",
        "tocTarget": null,
        "value": "—",
      },
      "type": "leaderLine",
    },
    {
      "attrs": {
        "label": "Difference as per our figures",
        "tocTarget": null,
        "value": "— or —",
      },
      "type": "leaderLine",
    },
    {
      "content": [],
      "type": "paragraph",
    },
    {
      "attrs": {
        "label": "Vessel's figures",
        "tocTarget": null,
        "value": "—",
      },
      "type": "leaderLine",
    },
    {
      "attrs": {
        "anchor": "final-1",
      },
      "content": [
        {
          "marks": [
            {
              "type": "bold",
            },
          ],
          "text": "Draft readings: ",
          "type": "text",
        },
        {
          "text": "Starboard side from shore, alongside vessel and Port side from boat.",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    {
      "attrs": {
        "headers": [
          "Draft Mark",
          "Means",
          "Mean corrected",
          "",
          "",
          "",
        ],
        "rows": [
          [
            "Fwd",
            "4.550",
            "4.5503",
            "",
            "Trim obs",
            "-0.8300 m",
          ],
          [
            "Ms",
            "4.970",
            "4.9701",
            "",
            "Trim correct",
            "-0.8300 m",
          ],
          [
            "Aft",
            "5.380",
            "5.3800",
            "",
            "List",
            "—",
          ],
          [
            "",
            "",
            "",
            "",
            "Deflection",
            "—",
          ],
        ],
        "tableId": "fin_readings",
      },
      "type": "dataTable",
    },
    {
      "attrs": {
        "anchor": "final-2",
      },
      "content": [
        {
          "marks": [
            {
              "type": "bold",
            },
          ],
          "text": "Sea water density: ",
          "type": "text",
        },
        {
          "text": "A water sample was collected in front of the mid draft, sea side. The vessel hydrometer was considered as official.",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    {
      "attrs": {
        "anchor": "final-3",
      },
      "content": [
        {
          "marks": [
            {
              "type": "bold",
            },
          ],
          "text": "Ballast water and fresh water: ",
          "type": "text",
        },
        {
          "text": "The ballast quantity and fresh water was informed by Chief Officer.",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    {
      "attrs": {
        "anchor": "final-4",
      },
      "content": [
        {
          "marks": [
            {
              "type": "bold",
            },
          ],
          "text": "Fuel R.O.B.: ",
          "type": "text",
        },
        {
          "text": "Declared by Ch/Eng at time of survey.",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    {
      "attrs": {
        "anchor": "final-5",
        "level": 3,
      },
      "content": [
        {
          "text": "Final Draft details",
          "type": "text",
        },
      ],
      "type": "heading",
    },
    {
      "attrs": {
        "anchor": "photos",
        "level": 2,
      },
      "content": [
        {
          "text": "Photographic Report",
          "type": "text",
        },
      ],
      "type": "heading",
    },
    {
      "attrs": {
        "anchor": "photos-1",
        "level": 3,
      },
      "content": [
        {
          "text": "Initial",
          "type": "text",
        },
      ],
      "type": "heading",
    },
    {
      "attrs": {
        "heightMm": 100,
        "photoId": "photo-1",
        "slotId": "photos_initial",
        "src": "https://cdn.example.com/photo.jpg",
        "widthMm": 150,
      },
      "type": "photoFrame",
    },
    {
      "attrs": {
        "anchor": "photos-3",
        "level": 3,
      },
      "content": [
        {
          "text": "Final",
          "type": "text",
        },
      ],
      "type": "heading",
    },
    {
      "attrs": {
        "heightMm": 100,
        "photoId": null,
        "slotId": "photos_final",
        "src": null,
        "widthMm": 150,
      },
      "type": "photoFrame",
    },
    {
      "attrs": {
        "anchor": "attachment",
        "level": 2,
      },
      "content": [
        {
          "text": "Attachment",
          "type": "text",
        },
      ],
      "type": "heading",
    },
    {
      "content": [
        {
          "text": "Draft Survey Certificates issued by undersigned surveyor",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    {
      "content": [
        {
          "text": "Draft Survey Certificate issued by vessel",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    {
      "content": [
        {
          "text": "Draft Survey Certificate issued by Terminal’s surveyor",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`buildDraftSurvey — CA-001 > snapshot — loading (CA-001) 1`] = `
{
  "content": [
    {
      "attrs": {
        "level": 3,
        "textAlign": "center",
      },
      "content": [
        {
          "text": "Survey Report",
          "type": "text",
        },
      ],
      "type": "heading",
    },
    {
      "attrs": {
        "textAlign": "center",
      },
      "content": [
        {
          "text": "Ref:",
          "type": "text",
        },
        {
          "marks": [
            {
              "attrs": {
                "field": "ref",
              },
              "type": "dataField",
            },
          ],
          "text": "—",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    {
      "attrs": {
        "level": 1,
        "textAlign": "center",
      },
      "content": [
        {
          "text": "Draft Survey",
          "type": "text",
        },
      ],
      "type": "heading",
    },
    {
      "attrs": {
        "level": 2,
        "textAlign": "center",
      },
      "content": [
        {
          "marks": [
            {
              "attrs": {
                "field": "vessel_name",
              },
              "type": "dataField",
            },
          ],
          "text": "“MV Perseus I”",
          "type": "text",
        },
      ],
      "type": "heading",
    },
    {
      "attrs": {
        "textAlign": "center",
      },
      "content": [
        {
          "text": "Flag ",
          "type": "text",
        },
        {
          "marks": [
            {
              "attrs": {
                "field": "flag",
              },
              "type": "dataField",
            },
          ],
          "text": "Malta",
          "type": "text",
        },
        {
          "text": " – IMO ",
          "type": "text",
        },
        {
          "marks": [
            {
              "attrs": {
                "field": "imo",
              },
              "type": "dataField",
            },
          ],
          "text": "9876543",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    {
      "attrs": {
        "textAlign": "center",
      },
      "content": [
        {
          "text": "at ",
          "type": "text",
        },
        {
          "marks": [
            {
              "attrs": {
                "field": "port",
              },
              "type": "dataField",
            },
          ],
          "text": "Santos",
          "type": "text",
        },
        {
          "text": " Port/Brazil – ",
          "type": "text",
        },
        {
          "marks": [
            {
              "attrs": {
                "field": "final_date",
              },
              "type": "dataField",
            },
          ],
          "text": "24/Jun/2026",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    {
      "attrs": {
        "heightMm": 108,
        "photoId": null,
        "slotId": "cover",
        "src": null,
        "widthMm": 158,
      },
      "type": "photoFrame",
    },
    {
      "attrs": {
        "level": 2,
      },
      "content": [
        {
          "text": "PERSON / COMPANIES CONTACTED",
          "type": "text",
        },
      ],
      "type": "heading",
    },
    {
      "attrs": {
        "kind": "label",
        "rows": [
          [
            "Client",
            "Cargill — Santos Brasil",
          ],
          [
            "Undersigned Surveyor",
            "NAABSA Marine Surveyors",
          ],
          [
            "Vessel's Command (Master / Chief Officer)",
            "J. Silva / A. Pereira",
          ],
        ],
        "tableId": "persons_contacted",
      },
      "type": "dataTable",
    },
    {
      "attrs": {
        "level": 2,
      },
      "content": [
        {
          "text": "Contents",
          "type": "text",
        },
      ],
      "type": "heading",
    },
    {
      "attrs": {
        "label": "Background",
        "tocTarget": "background",
        "value": "",
      },
      "type": "leaderLine",
    },
    {
      "attrs": {
        "label": "Ship's Particulars",
        "tocTarget": "particulars",
        "value": "",
      },
      "type": "leaderLine",
    },
    {
      "attrs": {
        "label": "Draft Survey",
        "tocTarget": "draft-survey",
        "value": "",
      },
      "type": "leaderLine",
    },
    {
      "attrs": {
        "label": "Initial",
        "tocTarget": "initial",
        "value": "",
      },
      "type": "leaderLine",
    },
    {
      "attrs": {
        "label": "4.1. Draft readings",
        "tocTarget": "initial-1",
        "value": "",
      },
      "type": "leaderLine",
    },
    {
      "attrs": {
        "label": "4.2. Sea water density",
        "tocTarget": "initial-2",
        "value": "",
      },
      "type": "leaderLine",
    },
    {
      "attrs": {
        "label": "4.3. Ballast water and fresh water",
        "tocTarget": "initial-3",
        "value": "",
      },
      "type": "leaderLine",
    },
    {
      "attrs": {
        "label": "4.4. Fuel R.O.B.",
        "tocTarget": "initial-4",
        "value": "",
      },
      "type": "leaderLine",
    },
    {
      "attrs": {
        "label": "4.5. Initial Draft details",
        "tocTarget": "initial-5",
        "value": "",
      },
      "type": "leaderLine",
    },
    {
      "attrs": {
        "label": "Final",
        "tocTarget": "final",
        "value": "",
      },
      "type": "leaderLine",
    },
    {
      "attrs": {
        "label": "6.1. Draft readings",
        "tocTarget": "final-1",
        "value": "",
      },
      "type": "leaderLine",
    },
    {
      "attrs": {
        "label": "6.2. Sea water density",
        "tocTarget": "final-2",
        "value": "",
      },
      "type": "leaderLine",
    },
    {
      "attrs": {
        "label": "6.3. Ballast water and fresh water",
        "tocTarget": "final-3",
        "value": "",
      },
      "type": "leaderLine",
    },
    {
      "attrs": {
        "label": "6.4. Fuel R.O.B.",
        "tocTarget": "final-4",
        "value": "",
      },
      "type": "leaderLine",
    },
    {
      "attrs": {
        "label": "6.5. Final Draft details",
        "tocTarget": "final-5",
        "value": "",
      },
      "type": "leaderLine",
    },
    {
      "attrs": {
        "label": "Photographic Report",
        "tocTarget": "photos",
        "value": "",
      },
      "type": "leaderLine",
    },
    {
      "attrs": {
        "label": "7.1. Initial",
        "tocTarget": "photos-1",
        "value": "",
      },
      "type": "leaderLine",
    },
    {
      "attrs": {
        "label": "7.3. Final",
        "tocTarget": "photos-3",
        "value": "",
      },
      "type": "leaderLine",
    },
    {
      "attrs": {
        "label": "Attachment",
        "tocTarget": "attachment",
        "value": "",
      },
      "type": "leaderLine",
    },
    {
      "attrs": {
        "anchor": "background",
        "level": 2,
      },
      "content": [
        {
          "text": "Background",
          "type": "text",
        },
      ],
      "type": "heading",
    },
    {
      "content": [
        {
          "text": "In compliance with the appointment survey from Messrs. ",
          "type": "text",
        },
        {
          "marks": [
            {
              "attrs": {
                "field": "client",
              },
              "type": "dataField",
            },
          ],
          "text": "Cargill",
          "type": "text",
        },
        {
          "text": ", we attended the vessel to carry out the Draft Survey to ascertain the total quantity of cargo loaded and to compare it with the Shore scale/Bills of lading.",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    {
      "content": [
        {
          "text": "She called ",
          "type": "text",
        },
        {
          "marks": [
            {
              "attrs": {
                "field": "port",
              },
              "type": "dataField",
            },
          ],
          "text": "Santos",
          "type": "text",
        },
        {
          "text": " Port to load a cargo of ",
          "type": "text",
        },
        {
          "marks": [
            {
              "attrs": {
                "field": "cargo",
              },
              "type": "dataField",
            },
          ],
          "text": "Soybean",
          "type": "text",
        },
        {
          "text": " in bulk bound to ",
          "type": "text",
        },
        {
          "marks": [
            {
              "attrs": {
                "field": "discharging_port",
              },
              "type": "dataField",
            },
          ],
          "text": "Rotterdam",
          "type": "text",
        },
        {
          "text": ".",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    {
      "attrs": {
        "anchor": "particulars",
        "level": 2,
      },
      "content": [
        {
          "text": "Ship's Particulars",
          "type": "text",
        },
      ],
      "type": "heading",
    },
    {
      "attrs": {
        "kind": "label",
        "rows": [
          [
            "Flag",
            "Malta",
          ],
          [
            "Port registry",
            "—",
          ],
          [
            "Call sign",
            "—",
          ],
          [
            "IMO number",
            "9876543",
          ],
          [
            "Type",
            "—",
          ],
          [
            "Delivered",
            "—",
          ],
          [
            "LOA",
            "—",
          ],
          [
            "LBP",
            "—",
          ],
          [
            "Depth moulded",
            "—",
          ],
          [
            "Breadth moulded",
            "—",
          ],
          [
            "Net tonnage",
            "—",
          ],
          [
            "Gross tonnage",
            "—",
          ],
          [
            "Summer DWT",
            "—",
          ],
        ],
        "tableId": "ships_particulars",
      },
      "type": "dataTable",
    },
    {
      "attrs": {
        "anchor": "draft-survey",
        "level": 2,
      },
      "content": [
        {
          "text": "Draft Survey",
          "type": "text",
        },
      ],
      "type": "heading",
    },
    {
      "attrs": {
        "anchor": "initial",
        "level": 2,
      },
      "content": [
        {
          "text": "Initial",
          "type": "text",
        },
      ],
      "type": "heading",
    },
    {
      "content": [
        {
          "text": "The initial Draft Survey was carried out on ",
          "type": "text",
        },
        {
          "marks": [
            {
              "attrs": {
                "field": "initial_date",
              },
              "type": "dataField",
            },
          ],
          "text": "24/Jun/2026",
          "type": "text",
        },
        {
          "text": ", upon berthing at ",
          "type": "text",
        },
        {
          "marks": [
            {
              "attrs": {
                "field": "terminal",
              },
              "type": "dataField",
            },
          ],
          "text": "T-Granéis",
          "type": "text",
        },
        {
          "text": " Terminal, shed ",
          "type": "text",
        },
        {
          "marks": [
            {
              "attrs": {
                "field": "shed",
              },
              "type": "dataField",
            },
          ],
          "text": "—",
          "type": "text",
        },
        {
          "text": " from ",
          "type": "text",
        },
        {
          "marks": [
            {
              "attrs": {
                "field": "initial_start",
              },
              "type": "dataField",
            },
          ],
          "text": "08:00h",
          "type": "text",
        },
        {
          "text": " up to ",
          "type": "text",
        },
        {
          "marks": [
            {
              "attrs": {
                "field": "initial_end",
              },
              "type": "dataField",
            },
          ],
          "text": "10:30h",
          "type": "text",
        },
        {
          "text": " local time jointly with ship's command and the undersigned surveyor.",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    {
      "attrs": {
        "anchor": "initial-1",
      },
      "content": [
        {
          "marks": [
            {
              "type": "bold",
            },
          ],
          "text": "Draft readings: ",
          "type": "text",
        },
        {
          "text": "Starboard side from shore, alongside vessel and Port side from boat.",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    {
      "attrs": {
        "headers": [
          "Draft Mark",
          "Means",
          "Mean corrected",
          "",
          "",
          "",
        ],
        "rows": [
          [
            "Fwd",
            "4.780",
            "4.7802",
            "",
            "Trim obs",
            "-0.6600 m",
          ],
          [
            "Ms",
            "5.120",
            "5.1198",
            "",
            "Trim correct",
            "-0.6599 m",
          ],
          [
            "Aft",
            "5.440",
            "5.4401",
            "",
            "Heel",
            "—",
          ],
          [
            "",
            "",
            "",
            "",
            "Deflection",
            "—",
          ],
        ],
        "tableId": "init_readings",
      },
      "type": "dataTable",
    },
    {
      "attrs": {
        "anchor": "initial-2",
      },
      "content": [
        {
          "marks": [
            {
              "type": "bold",
            },
          ],
          "text": "Sea water density: ",
          "type": "text",
        },
        {
          "text": "A seawater sample was collected in way of the midship draft mark, on the sea side. The vessel's hydrometer was considered the official instrument for all readings.",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    {
      "attrs": {
        "anchor": "initial-3",
      },
      "content": [
        {
          "marks": [
            {
              "type": "bold",
            },
          ],
          "text": "Ballast water and fresh water: ",
          "type": "text",
        },
        {
          "text": "All ballast water tanks were gauged individually, and the volumes were calculated by applying the applicable trim and list corrections. The fresh water quantity was provided by the Chief Officer",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    {
      "attrs": {
        "anchor": "initial-4",
      },
      "content": [
        {
          "marks": [
            {
              "type": "bold",
            },
          ],
          "text": "Fuel R.O.B.: ",
          "type": "text",
        },
        {
          "text": "According to the logbook – FWE.",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    {
      "attrs": {
        "anchor": "initial-5",
        "level": 3,
      },
      "content": [
        {
          "text": "Initial Draft details",
          "type": "text",
        },
      ],
      "type": "heading",
    },
    {
      "attrs": {
        "anchor": "final",
        "level": 2,
      },
      "content": [
        {
          "text": "Final",
          "type": "text",
        },
      ],
      "type": "heading",
    },
    {
      "content": [
        {
          "text": "The final Draft Survey was carried out on ",
          "type": "text",
        },
        {
          "marks": [
            {
              "attrs": {
                "field": "final_date",
              },
              "type": "dataField",
            },
          ],
          "text": "24/Jun/2026",
          "type": "text",
        },
        {
          "text": ", from ",
          "type": "text",
        },
        {
          "marks": [
            {
              "attrs": {
                "field": "final_start",
              },
              "type": "dataField",
            },
          ],
          "text": "14:00h",
          "type": "text",
        },
        {
          "text": " up to ",
          "type": "text",
        },
        {
          "marks": [
            {
              "attrs": {
                "field": "final_end",
              },
              "type": "dataField",
            },
          ],
          "text": "16:30h",
          "type": "text",
        },
        {
          "text": " local time jointly with ship's command and the undersigned surveyor to ascertain the total quantity of the cargo loaded being the following figures disclosed:",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    {
      "attrs": {
        "label": "Shore Scale/BsL figures (Official)",
        "tocTarget": null,
        "value": "—",
      },
      "type": "leaderLine",
    },
    {
      "attrs": {
        "label": "NAABSA's surveyor figures",
        "tocTarget": null,
        "value": "—",
      },
      "type": "leaderLine",
    },
    {
      "attrs": {
        "label": "Difference as per our figures",
        "tocTarget": null,
        "value": "— or —",
      },
      "type": "leaderLine",
    },
    {
      "content": [],
      "type": "paragraph",
    },
    {
      "attrs": {
        "label": "Vessel's figures",
        "tocTarget": null,
        "value": "—",
      },
      "type": "leaderLine",
    },
    {
      "attrs": {
        "anchor": "final-1",
      },
      "content": [
        {
          "marks": [
            {
              "type": "bold",
            },
          ],
          "text": "Draft readings: ",
          "type": "text",
        },
        {
          "text": "Starboard side from shore, alongside vessel and Port side from boat.",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    {
      "attrs": {
        "headers": [
          "Draft Mark",
          "Means",
          "Mean corrected",
          "",
          "",
          "",
        ],
        "rows": [
          [
            "Fwd",
            "4.550",
            "4.5503",
            "",
            "Trim obs",
            "-0.8300 m",
          ],
          [
            "Ms",
            "4.970",
            "4.9701",
            "",
            "Trim correct",
            "-0.8300 m",
          ],
          [
            "Aft",
            "5.380",
            "5.3800",
            "",
            "List",
            "—",
          ],
          [
            "",
            "",
            "",
            "",
            "Deflection",
            "—",
          ],
        ],
        "tableId": "fin_readings",
      },
      "type": "dataTable",
    },
    {
      "attrs": {
        "anchor": "final-2",
      },
      "content": [
        {
          "marks": [
            {
              "type": "bold",
            },
          ],
          "text": "Sea water density: ",
          "type": "text",
        },
        {
          "text": "A water sample was collected in front of the mid draft, sea side. The vessel hydrometer was considered as official.",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    {
      "attrs": {
        "anchor": "final-3",
      },
      "content": [
        {
          "marks": [
            {
              "type": "bold",
            },
          ],
          "text": "Ballast water and fresh water: ",
          "type": "text",
        },
        {
          "text": "The ballast quantity and fresh water was informed by Chief Officer.",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    {
      "attrs": {
        "anchor": "final-4",
      },
      "content": [
        {
          "marks": [
            {
              "type": "bold",
            },
          ],
          "text": "Fuel R.O.B.: ",
          "type": "text",
        },
        {
          "text": "Declared by Ch/Eng at time of survey.",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    {
      "attrs": {
        "anchor": "final-5",
        "level": 3,
      },
      "content": [
        {
          "text": "Final Draft details",
          "type": "text",
        },
      ],
      "type": "heading",
    },
    {
      "attrs": {
        "anchor": "photos",
        "level": 2,
      },
      "content": [
        {
          "text": "Photographic Report",
          "type": "text",
        },
      ],
      "type": "heading",
    },
    {
      "attrs": {
        "anchor": "photos-1",
        "level": 3,
      },
      "content": [
        {
          "text": "Initial",
          "type": "text",
        },
      ],
      "type": "heading",
    },
    {
      "attrs": {
        "heightMm": 100,
        "photoId": null,
        "slotId": "photos_initial",
        "src": null,
        "widthMm": 150,
      },
      "type": "photoFrame",
    },
    {
      "attrs": {
        "anchor": "photos-3",
        "level": 3,
      },
      "content": [
        {
          "text": "Final",
          "type": "text",
        },
      ],
      "type": "heading",
    },
    {
      "attrs": {
        "heightMm": 100,
        "photoId": null,
        "slotId": "photos_final",
        "src": null,
        "widthMm": 150,
      },
      "type": "photoFrame",
    },
    {
      "attrs": {
        "anchor": "attachment",
        "level": 2,
      },
      "content": [
        {
          "text": "Attachment",
          "type": "text",
        },
      ],
      "type": "heading",
    },
    {
      "content": [
        {
          "text": "Draft Survey Certificates issued by undersigned surveyor",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    {
      "content": [
        {
          "text": "Draft Survey Certificate issued by vessel",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    {
      "content": [
        {
          "text": "Draft Survey Certificate issued by Terminal’s surveyor",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;
